Fix minor styling issues with buttons.
Chrome and Firefox handle things overflowing their flex size
differently. Set flex-shrink to zero on the Remove/replace button so
that in Firefox it won't shrink and wrap the text.

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1212,6 +1212,10 @@ video {
   flex-shrink: 1;
 }
 
+.shrink-0 {
+  flex-shrink: 0;
+}
+
 .flex-grow {
   flex-grow: 1;
 }
